--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "electron": "5.0.0-beta.7"
+    "electron": "5.0.0-beta.7",
+    "electron-packager": "^14.0.6"
   }
 }
