--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "threema-desktop",
   "productName": "threema-desktop",
-  "description": "",
+  "description": "Implementation of web.threema.ch into a Desktop Client using electron js",
   "keywords": [],
   "main": "./main.js",
   "version": "0.0.1",
