--- a/package.json
+++ b/package.json
@@ -4,14 +4,30 @@
   "description": "Implementation of web.threema.ch into a Desktop Client using electron js",
   "keywords": [],
   "main": "./main.js",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "author": "callFEELD",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "dependencies": {},
   "devDependencies": {
     "electron": "5.0.0-beta.7",
+    "electron-builder": "^22.2.0",
     "electron-packager": "^14.0.6"
+  },
+  "build": {
+    "files": [
+      "**/*"
+    ],
+    "extraFiles": [
+      "assets/css/override.css",
+      "assets/img/Threema.png"
+    ],
+    "win": {
+      "target": "NSIS",
+      "icon": "build/threema.ico"
+   }
   }
 }
