--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "threema-desktop",
-  "productName": "threema-desktop",
+  "productName": "Threema Desktop",
   "description": "Implementation of web.threema.ch into a Desktop Client using electron js",
   "keywords": [],
   "main": "./main.js",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "author": "callFEELD",
   "scripts": {
     "start": "electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder"
   },
-  "dependencies": {},
+  "dependencies": {
+    "electron-notification-shim": "^1.1.0"
+  },
   "devDependencies": {
     "electron": "5.0.0-beta.7",
     "electron-builder": "^22.2.0",
@@ -34,7 +36,9 @@
     ],
     "extraFiles": [
       "assets/css/override.css",
-      "assets/img/Threema.png"
+      "assets/img/Threema.png",
+      "assets/img/threema_32.png",
+      "assets/img/threema_128.png"
     ],
     "win": {
       "target": "NSIS",
